fix resume link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <%= link_to_unless_current "Projects", projects_path %> |
           <%= link_to_unless_current "Contact", contact_path %> |
           <%= link_to_unless_current "Blog", blog_path, target: "_blank" %> |
-          <%= link_to_unless_current "Resume", resume_path %></h1>
+          <%= link_to_unless_current "Resume", resume_path, target: "_blank" %></h1>
         </nav>
       </header>
       <div class="profile-banner" id="yechiel-k-cover"></div>
