--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,61 @@
     <link rel="icon" type="image/png" href="/assets/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="/assets/favicon.ico" sizes="16x16" />
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-103955291-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+    <!--
+      ((//*/((((##%%###%%%%%%%%%%%%%%%%&&%%%%%%%%%%%%%#######%##((((((////
+      %###########%%#%%%%%%%%%######%&%%%#%#/%%%%%%%%%%#####%%%#####((((((
+      &&&&&&&&&%##%%%##%&&&%&%%%&%&&&&&%%%%##(//%%%%%%%######%%%##########
+      (###%%#%###%###%%&%%&%%&&&%%%%&&%#%%%%##/(%%%%%%%#######%%%#########
+      (*/((//(((((#####%&%@&&&&&%%%%%%%%%%%%%#(#%(//#%%%%%%#%%%%%%%%######
+      ***////(######(((%&%&&&%##((#(/(%##((%(/,.,/(//(%%%%%%%%%%%%%%%###%%
+      ***//*/#%%%%%%%##@&&&&&%#(##/(#(((***/#*,,../(//%%%%%%%%%%%%%%%%#%%%
+      ,,*(///(##%%#(#%&&%%&&&%((///******,,,*,,...  .((%%%%%%%%%%%%%%%%%%%
+      /*////***(#%%%%%%%&&&&%(////////*******,,,,,.. //#%&%%%%%%%%%%%%%%%%
+      **//*****(#%%%%%&&&&&//////////********,,,,...%(%&&&%&%%%&%%%%%&&&&&
+      *******/((#%%%&&&&&&&%((///////*********,,,....,#(%&&&&&%%%%%%%%%&%&
+      ***/***/((##%&&&&&&&%#(///////////**********...,##%&&&&&&&&&&&&&&&%%
+      **//***/((###%(%&&&@///######%%%%#(///(#%%%#*,#(%&&&&&&&&&&&&&&&%%%%
+      /*///*//(((##%(##%&&#((((##%&%%%%#(*,(%####/,/((%&&&&&&&&&&&&&&&&%%%
+      /*//////((##%%(/%%%&%((//(((#######%#*,/(#((/#,((#%&&&&&&&&&&&&&&&&&
+      /////*/(((##%%#(#%%%%#(/////****//((//,..,**,..((#%&&&&&&&&&&&&&&&&&
+      (((////(###%%%#((#%%%#(//////**/((///**,./,,. ./(#%&&&&&&&&&&&&%%%&%
+      (((////###%%%%%%##%%%%#((((///(#####(///*/(/,..*(((%&&&&&%%####%%#%%
+      (/(//*/(##%%%#%%%%%%&&%%####(####%%%%&%##(#(/*,/(((#####(((//**/#%%%
+      ,**/***/(((#%%%%%%%&&&%%%%%#%%%%%&%%%%%%%#/((//((#%#((////(#%%%%%%%%
+      ,*//***(###%%%%%%%%%&&%%%%%%%%##%##((/((%%#((((((##%&%%%%#((#%%##%%%
+      ,*//**/(#%%&&%%%%%%&&&&&&&&&&%#((((###(((%%#(#(((((#%%%%%%%%%%%%###%
+      *///**/(#%%%%%%%*#%&&&&&&&&&&%%((///(///(%%&%##(###%%&&&&&&&&&&&&&%%
+      ,*//*/(%%%%%%%%*,/#%&&&&&&&&&&&%%#####(#####%%#####&&&&&&&%%%%%%%%%%
+      */((/((#%%%%%%,.,,(%%&&&&&&&&&&&&&%%%%%#%%%######%%%##%%%%##########
+      (##((((%%%###...,,**#%&&&&&&&&&&&&&&&&%%%%%##(###%%#((%%%%%%&&%%%%%%
+      ##%(//(###(,...,,,,*/#%%&&&&&&&&&&&&&&&%%###(#(%%%(*,*(%&&&&&&&&&&&&
+      ##%((//*........,,,,,*/#&&&&&&&&%&&&&&%%#%##(/#%%%(,,*#%&&&&&&&&&&&&
+      ###(,.............,,,,,*/%%%&%%&%%%%%%%%%#(#(/(%&&(,,*#%%&&&&&&&&&&&
+      *...................,,,,,/#%%%%%#%%%##%##(**(/##%%(**/##%%%%%%%%%%&%
+      ....................,,//*(######((/(#(//*/,.,###%%%######///######%%
+      ..........,........*******,*((//////*,****,    .*%%#((((############
+      .................,*,,,,,,,,**,......,,...,,*,..    . ,#(((########%%
+
+      To get in touch:
+      Website: yechiel.me
+      Blog: blog.yechiel.me
+      Email: holler@yechiel.me
+      Twitter: @yechielk
+      GitHub: achasveachas
+      LinkdIn: https://www.linkedin.com/in/yechiel-k
+    -->
+
   </head>
   <body>
     <div class="main-wrapper profile">
