--- a/app/views/website/index.html.erb
+++ b/app/views/website/index.html.erb
@@ -1,1 +1,54 @@
-<h1>Hello World</h1>
+
+<div class="details-container">
+    <div class="bio-block details-block">
+        <div class="bio-content content-holder">
+        <div class="title-holder">
+            <h3>Biography</h3>
+        </div>
+        <div class="description-holder">
+            <p>
+            Brooklyn born and bred. I got my rabbinical training in Israel. Went on to teach third grade in the Jewish Online School and Adult Education through Chabad.
+            </p>
+            <p>
+            After a brief stint in Tech Support, I went on to study web development.
+            </p>
+            <p>
+            I currently live in Brooklyn, NY with my family, trying to support my passions for teaching, coding, and flying.
+            </p>
+        </div>
+        </div>
+    </div>
+    <div class="education-block details-block">
+        <div class="education-content content-holder">
+        <div class="title-holder">
+            <h3>Education</h3>
+        </div>
+        <div class="description-holder">
+            <h4>Flatiron School</h4>
+            <h5>Web Development</h5><br>
+            <h4>United Lubavitch Yeshivah</h4>
+            <h5>Rabbinical Studies</h5>
+        </div>
+        </div>
+    </div>
+    <div class="experience-block details-block">
+        <div class="experience-content content-holder">
+        <div class="title-holder">
+            <h3>Experience</h3>
+        </div>
+        <div class="description-holder">
+            <h4>Newtek Business Services</h4>
+            <h5>Full Stack Developer</h5><br>
+            <h4>Fidelity Payment Services</h4>
+            <h5>Software Integration</h5><br>
+            <h4>Flatiron School</h4>
+            <h5>Technical Coach</h5><br>
+            <h4><a target="_blank" style="color:#555;" href="https://mraberthon.com/">Mr. Aberthon</a></h4>
+            <h5>Website Consulting</h5><br>
+            <h4>Shluchim Online School</h4>
+            <h5>Teacher</h5><br>
+        </div>
+
+        </div>
+    </div>
+</div>
