--- a/app/views/website/projects.html.erb
+++ b/app/views/website/projects.html.erb
@@ -1,2 +1,152 @@
-<h1>Website#projects</h1>
-<p>Find me in app/views/website/projects.html.erb</p>
+<div class="vitals-text-container">
+    <h1 class="project-header">Projects I Enjoyed Creating</h1><br>
+    <h4 class="project-subtitle">For more please check out my <%= link_to "GitHub Profile", "https://github.com/achasveachas" %>.</h4>
+</div>
+<div class="details-container">
+<div class="experience-block details-block">
+    <div class="experience-content content-holder">
+    <div class="title-holder">
+        <h3>Alternate Side Parking Bot</h3>
+    </div>
+    <div class="description-holder">
+        <p>
+        A <strong>Twitter Bot</strong> that retweets whenever alternate side parking rules are suspended in New York City.<br><br>
+        <strong>Twitter Account:</strong> <a href="https://twitter.com/AlterSideBot" target="_blank">@AlterSideBot</a><br>
+        <strong>Source Code:</strong> <a href="https://github.com/achasveachas/alternate-side-bot" target="_blank">GitHub Repo</a><br>
+        <strong>Blog Post:</strong> <a href="https://blog.yechiel.me/creating-my-first-twitter-bot-b5e0da5c8cbb" target="_blank">Creating my first Twitter Bot</a><br>
+        </p>
+    </div>
+    </div>
+</div>
+<div class="experience-block details-block">
+    <div class="experience-content content-holder">
+    <div class="title-holder">
+        <h3>Compatibilty Request Tracker</h3>
+    </div>
+    <div class="description-holder">
+        <p>
+        An app built off of my <strong>App Tracker</strong> to help my Integrations Department keep track of which <strong>Payment Gateways</strong> we integrate with. Has all the functionality of the <strong>App Tracker</strong>. Uses the <strong>AXLSX Rails</strong> gem to export the data as an Excel sheet.<br><br>
+        <strong>Source Code:</strong> <a href="https://github.com/achasveachas/compatibility-list-client" target="_blank">React App</a>,
+        <a href="https://github.com/achasveachas/compatibility-list-api" target="_blank">API</a><br>
+        <strong>Blog Post:</strong> <a href="https://blog.yechiel.me/from-job-applications-to-compatibility-lists-6e6a2068a556" target="_blank">From Job Applications To Compatibility Lists</a><br>
+        </p>
+    </div>
+    </div>
+</div>
+<div class="experience-block details-block">
+    <div class="experience-content content-holder">
+    <div class="title-holder">
+        <h3>App Tracker</h3>
+    </div>
+    <div class="description-holder">
+        <p>
+        An online tool for job seekers to track their job applications. It’s a <strong>ReactJS/Redux</strong> app talking to a <strong>Rails API</strong> with a <strong>PostgreSQL</strong> Database on the back end. Users are authenticated using <strong>JWT Tokens</strong><br>
+        The Rails API was built using <strong>TDD</strong> pattern with <strong>RSpec</strong>.<br><br>
+        <strong>Live App:</strong> <a href="https://app-tracker-react.herokuapp.com/" target="_blank">App-Tracker</a><br>
+        <small>(<strong>Demo Username:</strong> demo, <strong>Password:</strong> demouser)</small><br>
+        <strong>Source Code:</strong> <a href="https://github.com/achasveachas/app-tracker-react" target="_blank">React App</a>,
+        <a href="https://github.com/achasveachas/app-tracker" target="_blank">API</a><br>
+        <strong>Blog Post:</strong> <a href="https://blog.yechiel.me/reactjs-app-with-rails-api-4ffb12ba6608" target="_blank">Time To OverReact</a><br>
+        </p>
+    </div>
+    </div>
+</div>
+<div class="experience-block details-block">
+    <div class="experience-content content-holder">
+    <div class="title-holder">
+        <h3>App Tracker</h3>
+    </div>
+    <div class="description-holder">
+        <p>
+        An online tool for job seekers to track their job applications. It’s a <strong>ReactJS/Redux</strong> app talking to a <strong>Rails API</strong> with a <strong>PostgreSQL</strong> Database on the back end. Users are authenticated using <strong>JWT Tokens</strong><br>
+        The Rails API was built using <strong>TDD</strong> pattern with <strong>RSpec</strong>.<br><br>
+        <strong>Live App:</strong> <a href="https://app-tracker-react.herokuapp.com/" target="_blank">App-Tracker</a><br>
+        <small>(<strong>Demo Username:</strong> demo, <strong>Password:</strong> demouser)</small><br>
+        <strong>Source Code:</strong> <a href="https://github.com/achasveachas/app-tracker-react" target="_blank">React App</a>,
+        <a href="https://github.com/achasveachas/app-tracker" target="_blank">API</a><br>
+        <strong>Blog Post:</strong> <a href="https://blog.yechiel.me/reactjs-app-with-rails-api-4ffb12ba6608" target="_blank">Time To OverReact</a><br>
+        </p>
+    </div>
+    </div>
+</div>        <div class="experience-block details-block">
+    <div class="experience-content content-holder">
+    <div class="title-holder">
+        <h3>Freddit</h3>
+    </div>
+    <div class="description-holder">
+        <p>
+        A basic Reddit clone. Originally built using <strong>Sinatra</strong>, later rebuilt using <strong>Rails</strong> with <strong>jQuery</strong> for the front-end.<br>
+        The app features threads with nested comments. users are authenticated using <strong>bcrypt</strong> or <strong>GitHub OAuth</strong> (in the Rails version).<br><br>
+        <strong>Live App:</strong> <a href="https://freddit-jq.herokuapp.com/" target="_blank">Freddit</a><br>
+        <small>(<strong>Demo Username:</strong> demouser, <strong>Password:</strong> demouser)</small><br>
+        <strong>Source Code:</strong> <a href="https://github.com/achasveachas/freddit" target="_blank">Sinatra Version</a>,
+        <a href="https://github.com/achasveachas/freddit-jq" target="_blank">Rails/jQuery Version</a><br>
+        <strong>Blog Posts:</strong> <a href="https://blog.yechiel.me/i-challenge-you-sinatra-c6f875e29db7" target="_blank">I Callange You Sinatra</a>,
+        <a href="https://blog.yechiel.me/challenges-revisited-33ae6ab648ae" target="_blank">Challenges Revisited</a><br>
+        </p>
+    </div>
+    </div>
+</div>
+<div class="experience-block details-block">
+    <div class="experience-content content-holder">
+    <div class="title-holder">
+        <h3>FlyLog</h3>
+    </div>
+    <div class="description-holder">
+        <p>
+        A <strong>Rails</strong> app for pilots to log their flight hours and which airplanes they've flown.<br>
+        The app features <strong>GitHub OAuth</strong> authentication for users.<br><br>
+        <strong>Live App:</strong> <a href="https://flylogger.herokuapp.com/ " target="_blank">FlyLog</a><br>
+        <small>(<strong>Demo Username:</strong> demo@yechiel.me, <strong>Password:</strong> demouser)</small><br>
+        <strong>Source Code:</strong> <a href="https://github.com/achasveachas/FlyLog" target="_blank">GitHub Repo</a><br>
+        <strong>Blog Post:</strong> <a href="https://blog.yechiel.me/fly-off-the-rails-78f3e4e82e72#.uwmnx5js7 " target="_blank">Fly Off The Rails</a><br>
+        </p>
+    </div>
+    </div>
+</div>
+<div class="experience-block details-block">
+    <div class="experience-content content-holder">
+    <div class="title-holder">
+        <h3>Corneal</h3>
+    </div>
+    <div class="description-holder">
+        <p>
+        A <strong>Ruby Gem</strong> that generates the basic structure for <strong>Sinatra</strong> apps, including Model and Scaffold generators built after the <strong>Rails</strong> Model and Scaffold generators.<br>
+        Built in collaboration with fellow students at <strong>Flatiron</strong>.<br><br>
+        <strong>RubyGems:</strong> <a href="https://rubygems.org/gems/corneal" target="_blank">Corneal</a><br>
+        <strong>Source Code:</strong> <a href="https://github.com/thebrianemory/corneal" target="_blank">GitHub Repo</a><br>
+        <strong>Blog Post:</strong> <a href="https://blog.yechiel.me/of-scaffolds-and-gems-140bdbe2e005#.bn1covkp7" target="_blank">Of Scaffolds And Gems</a><br>
+        </p>
+    </div>
+    </div>
+</div>
+<div class="experience-block details-block">
+    <div class="experience-content content-holder">
+    <div class="title-holder">
+        <h3>Tic Tac Toe</h3>
+    </div>
+    <div class="description-holder">
+        <p>
+        A fun game of <strong>Tic Tac Toe</strong> built using <strong>Ruby</strong> using classic <strong>Object Oriented</strong> patterns.<br>
+        The game features a fully-functioning (almost) unbeatable <strong>AI</strong> player, and so many <strong>Wargames</strong> references, you'll find yourself wishing for a nice game of chess instead.<br><br>
+        <strong>Source Code:</strong> <a href="https://github.com/achasveachas/Tic-Tac-Toe-with-AI" target="_blank">GitHub Repo</a><br>
+        <strong>Blog Post:</strong> <a href="https://blog.yechiel.me/tic-tac-tips-517d5c80f47d" target="_blank">Tic Tac Tips</a><br>
+        </p>
+    </div>
+    </div>
+</div>
+<div class="experience-block details-block">
+    <div class="experience-content content-holder">
+    <div class="title-holder">
+        <h3>DansDeals</h3>
+    </div>
+    <div class="description-holder">
+        <p>
+        A <strong>Ruby CLI Gem</strong> that uses <strong>Nokogiri</strong> to scrape a popular deals site and displays the latest ones to the user.<br><br>
+        <strong>RubyGems:</strong> <a href="https://rubygems.org/gems/dansdeals" target="_blank">DansDeals</a><br>
+        <strong>Source Code:</strong> <a href="https://github.com/achasveachas/dansdeals" target="_blank">GitHub Repo</a><br>
+        <strong>Blog Post:</strong> <a href="https://blog.yechiel.me/gem-install-swim-82ff7a95e605" target="_blank">Gem Install Swim</a><br>
+        </p>
+    </div>
+    </div>
+</div>
