--- a/app/views/website/contact.html.erb
+++ b/app/views/website/contact.html.erb
@@ -3,11 +3,11 @@
     <h2><strong>Contact Me:</strong></h2>
     <br>
     <h3 class="profile-contact">Blog: <%= link_to "Rabbi On Rails", blog_path, target: "_blank" %> | 
-    Email: <%= mail_to "contact@yechiel.me" %></h3>
-    <h3 class="profile-contact">LinkedIn: <a href="https://www.linkedin.com/in/yechiel-k" target="_blank">Yechiel Kalmenson</a> | 
-    Github: <a href="https://github.com/achasveachas" target="_blank">achasveachas</a></h3>
-    <h3 class="profile-contact">Twitter: <a href="https://twitter.com/yechielk" target="_blank">@yechielk</a> | 
-    Quora: <a href="https://www.quora.com/profile/Yechiel-Kay" target="_blank">Yechiel Kay</a></h3>
+    Email: <%= mail_to SocialLinks.email %></h3>
+    <h3 class="profile-contact">LinkedIn: <%= link_to "Yechiel Kalmenson", SocialLinks.linkedin, target: "_blank" %> | 
+    Github: <%= link_to "achasveachas", SocialLinks.github, target: "_blank" %></h3>
+    <h3 class="profile-contact">Twitter: <%= link_to "@yechielk", SocialLinks.twitter, target: "_blank" %> | 
+    Quora: <%= link_to "Yechiel Kay", SocialLinks.quora, target: "_blank" %></h3>
     <br><br><br>
     <%= form_tag "https://formspree.io/form@yechiel.me", class: "form-container" do %>
         <%= text_field_tag :name, "", placeholder: "Name:" %><br><br>
