--- a/app/views/website/projects.html.erb
+++ b/app/views/website/projects.html.erb
@@ -1,6 +1,6 @@
 <div class="vitals-text-container">
     <h1 class="project-header">Projects I Enjoyed Creating</h1><br>
-    <h4 class="project-subtitle">For more please check out my <%= link_to "GitHub Profile", "https://github.com/achasveachas", target: "_blank" %>.</h4>
+    <h4 class="project-subtitle">For more please check out my <%= link_to "GitHub Profile", SocialLinks.github, target: "_blank" %>.</h4>
 </div>
 
 <div class="details-container">
