--- a/app/views/website/contact.html.erb
+++ b/app/views/website/contact.html.erb
@@ -9,13 +9,13 @@
     <h3 class="profile-contact">Twitter: <%= link_to "@yechielk", SocialLinks.twitter, target: "_blank" %> | 
     Quora: <%= link_to "Yechiel Kay", SocialLinks.quora, target: "_blank" %></h3>
     <br><br><br>
-    <%= form_tag "https://formspree.io/form@yechiel.me", class: "form-container" do %>
-        <%= text_field_tag :name, "", placeholder: "Name:" %><br><br>
-        <%= email_field_tag :email, "", placeholder: "Email:" %><br><br>
-        <%= text_area_tag :message, "", placeholder: "Your Message:", rows: "10" %><br><br>
-        <%= hidden_field_tag :_next, "https://yechiel.me/contact" %>
-        <%= hidden_field_tag :_format, "plain" %>
-        <%= hidden_field_tag :_subject, "Yechiel Kalmenson Contact Form" %>
-        <%= submit_tag "Send", class: "submit" %>
+    <%= form_with url: "https://formspree.io/form@yechiel.me", class: "form-container" do |f| %>
+        <%= f.text_field :name, placeholder: "Name:" %><br><br>
+        <%= f.email_field :email, placeholder: "Email:" %><br><br>
+        <%= f.text_area :message, placeholder: "Your Message:", rows: "10" %><br><br>
+        <%= f.hidden_field :_next, value: "https://yechiel.me/contact" %>
+        <%= f.hidden_field :_format, value: "plain" %>
+        <%= f.hidden_field :_subject, value: "Yechiel Kalmenson Contact Form" %>
+        <%= f.submit "Send", class: "submit" %>
     <% end %>
 </div>
