--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -1,4 +1,9 @@
-<%= form_tag admin_login_path do %>
-    <%= label_tag :password %>
-    <%= password_field_tag :password %>
-<% end %>
+<div class="vitals-text-container">
+
+  <%= form_with url: login_path, class: "form-container" do |form| %>
+    <%= form.label :pasword, "Please enter your password to log in:" %>
+    <%= form.password_field :password %>
+    <%= form.submit "Login", class: "submit" %>
+  <% end %>
+
+</div>
