create the new and edit projects views

--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Projects#edit</h1>
-<p>Find me in app/views/projects/edit.html.erb</p>
+<div class="vitals-text-container">
+
+    <h2>Edit Project</h2>
+
+    <%= render 'form' %>
+
+
+</div>
