--- a/app/views/admin/projects/new.html.erb
+++ b/app/views/admin/projects/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Projects#new</h1>
-<p>Find me in app/views/projects/new.html.erb</p>
+<div class="vitals-text-container">
+
+    <h2>New Project</h2>
+
+    <%= render 'form' %>
+
+
+</div>
