add blog title to project form

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -13,6 +13,8 @@
     <%= form.text_field :demo_password %>
     <%= form.label :repo %>
     <%= form.text_field :repo %>
+    <%= form.label :blog_title %>
+    <%= form.text_field :blog_title %>
     <%= form.label :blog_post %>
     <%= form.text_field :blog_post %>
     <%= form.submit class: "submit" %>
