--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -3,6 +3,7 @@
     <h2>Edit Project</h2>
 
     <%= render 'form' %>
+    <%= button_to "Delete", admin_project_path(@project), method: :delete, class: "submit", data: {confirm: "Are you sure you want to delete this?"} %>
 
 
 </div>
