--- a/app/views/website/contact.html.erb
+++ b/app/views/website/contact.html.erb
@@ -8,6 +8,7 @@
     Github: <%= link_to "achasveachas", SocialLinks.github, target: "_blank" %></h3>
     <h3 class="profile-contact">Twitter: <%= link_to "@yechielk", SocialLinks.twitter, target: "_blank" %> | 
     Quora: <%= link_to "Yechiel Kay", SocialLinks.quora, target: "_blank" %></h3>
+    <h3>DEV.to: <%= link_to "yechielk", SocialLinks.devto, target: "_blank" %></h3>
     <br><br><br>
     <%= form_with url: "https://formspree.io/form@yechiel.me", class: "form-container" do |f| %>
         <%= f.text_field :name, placeholder: "Name:" %><br><br>
