change the css file into a scss

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -85,7 +85,7 @@ header {
 
 
 #yechiel-k-cover {
-  background-image: url("/assets/fcm6zBK.jpg");
+  background-image: asset_url("fcm6zBK.jpg");
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
   -o-transition: 0.2s;
@@ -94,7 +94,7 @@ header {
 
 
 #yechiel-k-card {
-  background-image: url("/assets/yechiel-k.JPG");
+  background-image: asset_url("yechiel-k.JPG");
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
   -o-transition: 0.2s;
