--- a/app/views/admin/admin.html.erb
+++ b/app/views/admin/admin.html.erb
@@ -1,3 +1,7 @@
+<div class="vitals-text-container">
+    <h4><%= link_to "New Project", new_admin_project_path %></h4>
+
+</div>
 <br><h1>Logs</h1>
 <ul>
     <% @logs.each do |log| %>
