--- a/app/views/admin/visits/index.html.erb
+++ b/app/views/admin/visits/index.html.erb
@@ -2,9 +2,9 @@
     <h4><%= link_to "New Project", new_admin_project_path %></h4>
 
 </div>
-<br><h1>Logs</h1>
+<br><h1>Sessions</h1>
 <ul>
-    <% @logs.each do |log| %>
-        <li><strong></strong><%= log.company || log.ip %></strong> visited on <%= log.started_at.localtime("-05:00").strftime("%m/%d/%Y at %l:%M%p") %> from <strong><%= log.location %></strong></li><br>
+    <% @visits.each do |visit| %>
+        <li><strong></strong><%= link_to (visit.company || visit.ip), admin_visit_path(visit) %></strong> visited on <%= visit.started_at.localtime("-05:00").strftime("%m/%d/%Y at %l:%M%p") %> from <strong><%= visit.location %></strong></li><br>
     <% end %>
 </ul>
