--- a/app/views/admin/visits/show.html.erb
+++ b/app/views/admin/visits/show.html.erb
@@ -4,7 +4,7 @@
         <strong></strong><%= @visit.company || @visit.ip %></strong> visited on <%= @visit.started_at.localtime("-05:00").strftime("%m/%d/%Y at %l:%M%p") %> from <strong><%= @visit.location %></strong>
     </p>
     <p>
-        The session lasted <%= ((@visit.events.last.time - @visit.events.first.time) / 60).to_i %> minutes.
+        The session lasted <%= @events.size >= 1 ? ((@events.last.time - @events.first.time) / 60).to_i : 0 %> minutes.
     </p>
     
 
