--- a/app/views/admin/visits/show.html.erb
+++ b/app/views/admin/visits/show.html.erb
@@ -20,6 +20,6 @@
 <h4>Events:</h4>
 <ul>
     <% @visit.events.each do |event| %>
-        <li><p><%= event.time.localtime("-05:00").strftime("%m/%d/%Y at %l:%M%p") %>: <strong><%= event.properties['action']%></strong> page.</p></li>
+        <li><p><%= event.time.localtime.strftime("%m/%d/%Y at %l:%M:%S%P") %>: visited the <strong><%= event.properties['action']%></strong> page.</p></li>
     <% end %>
 </ul>
