add links to previous and next sessions

--- a/app/views/admin/visits/show.html.erb
+++ b/app/views/admin/visits/show.html.erb
@@ -9,6 +9,9 @@
     
 
 </div>
+<%= link_to "← Previous Session", admin_visit_path(@visit.previous) if @visit.previous %> | 
+<%= link_to "All Sessions", admin_visits_path %> | 
+<%= link_to "Next Session →", admin_visit_path(@visit.next) if @visit.next %>
 <ul>
     <% @visit.attributes.each do |attr, value| %>
         <% if value %>
