update the biography

--- a/app/views/website/index.html.erb
+++ b/app/views/website/index.html.erb
@@ -6,13 +6,12 @@
         </div>
         <div class="description-holder">
             <p>
-                Brooklyn born and bred. I got my rabbinical training in Israel. Went on to teach third grade in the Jewish Online School and Adult Education through Chabad.
+                Yechiel Kalmenson (aka Rabbi On Rails) was born and raised in Brooklyn. He got his rabbinical training in Israel and spent a few years teaching both children and adults.             </p>
+            <p>
+                After a brief stint in Tech Support, he found his next calling and went on to study web development.
             </p>
             <p>
-                After a brief stint in Tech Support, I went on to study web development.
-            </p>
-            <p>
-                I currently live in Brooklyn, NY with my family, trying to support my passions for teaching, coding, and flying.
+                He currently lives in Brooklyn, NY with his family, using tech to support his passions for teaching, coding, and flying.
             </p>
         </div>
         </div>
@@ -42,8 +41,6 @@
             <h5>Software Integration</h5><br>
             <h4>Flatiron School</h4>
             <h5>Technical Coach</h5><br>
-            <h4><a target="_blank" style="color:#555;" href="https://mraberthon.com/">Mr. Aberthon</a></h4>
-            <h5>Website Consulting</h5><br>
             <h4>Shluchim Online School</h4>
             <h5>Teacher</h5><br>
         </div>
