start working on the form

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -132,6 +132,10 @@ input, textarea {
   width: 100%;
 }
 
+.magic, input {
+  width: auto
+}
+
 textarea {
     overflow: auto;
     vertical-align: top;
