--- a/app/views/website/magic.html.erb
+++ b/app/views/website/magic.html.erb
@@ -1,3 +1,8 @@
-<%= javascript_include_tag "magic" %>
-
-<h1>Here be magic!</h1>
+<div class="vitals-text-container magic-form">
+    <h1>Here be magic!</h1>
+    <p>
+        To get started, think of a number between 1 and 100.
+    </p><br><br>
+    <%= label_tag "x3", "Divide your number into 3 using only whole numbers*. How much is the remainder? (if there is no remainder enter 0)" %>
+    <%= text_field_tag "x3", nil, size: 2, maxlength: 1 %>
+</div>
