--- a/app/views/website/magic.html.erb
+++ b/app/views/website/magic.html.erb
@@ -4,13 +4,15 @@
         To get started, think of a number between 1 and 100.
     </p><br><br>
     <%= label_tag "x3", "Divide your number into 3 using only whole numbers*. How much is the remainder? (if there is no remainder enter 0)" %>
-    <%= number_field_tag "x3", nil, in: 0..2, size: 2, maxlength: 1, value: 0, data: {x: 3} %><br> 
+    <%= number_field_tag "x3", nil, in: 0...3, size: 2, maxlength: 1, value: 0, data: {x: 3} %><br> 
     <%= label_tag "x5", "Now divide your number into 5 using only whole numbers*.How much is the remainder?" %>
-    <%= number_field_tag "x5", nil, in: 0..5, size: 2, maxlength: 1, value: 0, data: {x: 5} %><br>
+    <%= number_field_tag "x5", nil, in: 0...5, size: 2, maxlength: 1, value: 0, data: {x: 5} %><br>
     <%= label_tag "x7", "Now divide your number into 7 using only whole numbers*.How much is the remainder?" %>
-    <%= number_field_tag "x7", nil, in: 0..7, size: 2, maxlength: 1, value: 0, data: {x: 7} %><br>
+    <%= number_field_tag "x7", nil, in: 0...7, size: 2, maxlength: 1, value: 0, data: {x: 7} %><br>
     <%= submit_tag "Calculate", class: "submit", onclick: "calculate()" %>
-    <br><br><br><br>
+    <br>
+    <div id="result" ></div>
+    <br><br><br>
     <p>
     *For example: if your number was 10. Dividing into 3 would leave a remainder of 1,<br>dividing into 5 would leave a remainder of 0, and dividing it into 7 would leave a remainder of 3.
     </p>
