--- a/app/views/website/magic.html.erb
+++ b/app/views/website/magic.html.erb
@@ -1,13 +1,13 @@
-<div class="vitals-text-container magic-form">
+<div class="vitals-text-container magic-form form-container">
     <h1>Here be magic!</h1>
     <p>
         To get started, think of a number between 1 and 100.
     </p><br><br>
-    <%= label_tag "x3", "Divide your number into 3 using only whole numbers*. How much is the remainder? (if there is no remainder enter 0)" %>
+    <%= label_tag "x3", "Divide your number into <strong>3</strong> using only whole numbers*.<br>How much is the remainder?".html_safe %>
     <%= number_field_tag "x3", nil, in: 0...3, size: 2, maxlength: 1, value: 0, data: {x: 3} %><br> 
-    <%= label_tag "x5", "Now divide your number into 5 using only whole numbers*.How much is the remainder?" %>
+    <%= label_tag "x5", "Now divide your number into <strong>5</strong> using only whole numbers*.<br>How much is the remainder?".html_safe %>
     <%= number_field_tag "x5", nil, in: 0...5, size: 2, maxlength: 1, value: 0, data: {x: 5} %><br>
-    <%= label_tag "x7", "Now divide your number into 7 using only whole numbers*.How much is the remainder?" %>
+    <%= label_tag "x7", "Now divide your number into <strong>7</strong> using only whole numbers*.<br>How much is the remainder?".html_safe %>
     <%= number_field_tag "x7", nil, in: 0...7, size: 2, maxlength: 1, value: 0, data: {x: 7} %><br>
     <%= submit_tag "Calculate", class: "submit", onclick: "calculate()" %>
     <br><br>
