change title to software engineer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,7 @@
         <div class="vitals-text-container">
           <h1 class="profile-name">Yechiel Kalmenson</h1>
           <h2 class="profile-location"><strong>A.K.A. Rabbi on Rails</strong></h2>
-          <h2 class="profile-location">Full Stack Web Developer</h2>
+          <h2 class="profile-location">Software Engineer</h2>
           <h2 class="profile-location">Ruby, Sinatra, Rails, PHP, SQL, JavaScript, jQuery, React/Redux</h2><br>
           <% if action_name == "index" %>
             <div class="profile-quote">
