change border color on profile photo

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -203,8 +203,8 @@ input.submit {
   right: 0;
   margin: 0 auto;
   border-style: solid;
-  border-color: #256686;
-  border-radius: 100px;
+  border-color: #00786E;
+  border-radius: 150px;
 }
 
 .vitals-text-container {
