--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -202,8 +202,7 @@ input.submit {
   left: 0;
   right: 0;
   margin: 0 auto;
-  border-style: solid;
-  border-color: #00786E;
+  box-shadow: 0px 0px 8px #00786E;
   border-radius: 150px;
 }
 
