refactor the footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
 
     </div>
     <footer class="footer">
-      &copy; 2018 <%= link_to "Yechiel Kalmenson", root_path %>
+      &copy; <%= Time.now.year %> <%= link_to "Yechiel Kalmenson", root_path %>
       <p>
         <br>Sponsored by <%= link_to "Mr. Aberthon", "https://mraberthon.com/", target: "_blank" %>
       </p>
