update the header template to reflect current experience

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,9 +77,9 @@
         </div>
         <div class="vitals-text-container">
           <h1 class="profile-name">Yechiel Kalmenson</h1>
-          <h2 class="profile-location"><strong>A.K.A. Rabbi on Rails</strong></h2>
-          <h2 class="profile-location">Software Engineer</h2>
-          <h2 class="profile-location">Ruby, Sinatra, Rails, PHP, SQL, JavaScript, jQuery, React/Redux</h2><br>
+          <h2 class="profile-location">Software Engineer at Pivotal</h2>
+          <h2 class="profile-location">Blogger at <%= link_to "Rabbi On Rails", blog_path %></h2>
+          <h2 class="profile-location">Editor and curator at <%= link_to "Torah && Tech", SocialLinks.torah_tech %></h2>
           <% if action_name == "index" %>
             <div class="profile-quote">
               “In life, there's no such thing as staying where you are. If you are not actively growing you are inevitably falling behind."<br>
