add VMware to history

--- a/app/views/website/index.html.erb
+++ b/app/views/website/index.html.erb
@@ -35,7 +35,7 @@
             <h3>Experience</h3>
         </div>
         <div class="description-holder">
-            <h4>Pivotal Cloud Foundry</h4>
+            <h4>VMware - Pivotal Cloud Foundry</h4>
             <h5>Software Engineer</h5><br>            
             <h4>Newtek Business Services</h4>
             <h5>Full Stack Developer</h5><br>
