change current location to NJ

--- a/app/views/website/index.html.erb
+++ b/app/views/website/index.html.erb
@@ -11,7 +11,7 @@
                 After a brief stint in Tech Support, he found his next calling and went on to study web development.
             </p>
             <p>
-                He currently lives in Brooklyn, NY with his family, using tech to support his passions for teaching, coding, and flying.
+                He currently lives in New Jersey with his family, using tech to support his passions for teaching, coding, and flying.
             </p>
         </div>
         </div>
