--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="vitals-text-container">
 
-  <%= form_with model: [:admin, @project], class: "form-container" do |form| %>
+  <%= form_with model: [:admin, @project], class: "form-container", local: true do |form| %>
     <%= form.label :name %>
     <%= form.text_field :name %>
     <%= form.label :description %>
