update the wording on project urls

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -5,7 +5,7 @@
     <%= form.text_field :name %>
     <%= form.label :description %>
     <%= form.text_area :description, rows: "7" %>
-    <%= form.label :demo_url, "Demo URL" %>
+    <%= form.label :demo_url, "Project URL" %>
     <%= form.text_field :demo_url %>
     <%= form.label :demo_username %>
     <%= form.text_field :demo_username %>
