update monetization payment pointer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= favicon_link_tag %>
-    <meta name="monetization" content="$ilp.uphold.com/i8HngeGm3wMY">
+    <meta name="monetization" content="$ilp.uphold.com/EKYZ8GRW3iA8">
 
     <!--
       ((//*/((((##%%###%%%%%%%%%%%%%%%%&&%%%%%%%%%%%%%#######%##((((((////
