--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -2,21 +2,21 @@
 
   <%= form_with model: [:admin, @project], class: "form-container", local: true do |form| %>
     <%= form.label :name %>
-    <%= form.text_field :name, id: :project_name %>
+    <%= form.text_field :name, id: :project_name %><br>
     <%= form.label :description %>
-    <%= form.text_area :description, rows: "7", id: :project_description %>
+    <%= form.text_area :description, rows: "7", id: :project_description %><br>
     <%= form.label :demo_url, "Project URL" %>
-    <%= form.text_field :demo_url, id: :project_demo_url %>
+    <%= form.text_field :demo_url, id: :project_demo_url %><br>
     <%= form.label :demo_username %>
-    <%= form.text_field :demo_username, id: :project_demo_username %>
+    <%= form.text_field :demo_username, id: :project_demo_username %><br>
     <%= form.label :demo_password %>
-    <%= form.text_field :demo_password, id: :project_demo_password %>
+    <%= form.text_field :demo_password, id: :project_demo_password %><br>
     <%= form.label :repo %>
-    <%= form.text_field :repo, id: :project_repo %>
+    <%= form.text_field :repo, id: :project_repo %><br>
     <%= form.label :blog_title %>
-    <%= form.text_field :blog_title, id: :project_blog_title %>
+    <%= form.text_field :blog_title, id: :project_blog_title %><br>
     <%= form.label :blog_post %>
-    <%= form.text_field :blog_post, id: :project_blog_post %>
+    <%= form.text_field :blog_post, id: :project_blog_post %><br>
     <%= form.submit class: "submit" %>
   <% end %>
 
